--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>A-Frame Tube Component</title>
+    <title>A-Frame Pipe Component</title>
     <script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
     <script src="../index.js"></script>
     <style>
@@ -12,10 +12,10 @@
 </head>
 <body>
 <a-scene antialias="true">
-    <a-entity tube="" position="-3 0 0"></a-entity>
-    <a-entity tube="outerRadius:0.5; innerRadius:0.8" position="-1 0 0"></a-entity>
-    <a-entity tube="outerRadius:0.5; innerRadius:0.25" position="1 0 0"></a-entity>
-    <a-entity tube="outerRadius:0.5; innerRadius:0" position="3 0 0"></a-entity>
+    <a-entity pipe="" position="-3 0 0"></a-entity>
+    <a-entity pipe="outerRadius:0.5; innerRadius:0.8" position="-1 0 0"></a-entity>
+    <a-entity pipe="outerRadius:0.5; innerRadius:0.25" position="1 0 0"></a-entity>
+    <a-entity pipe="outerRadius:0.5; innerRadius:0" position="3 0 0"></a-entity>
     <a-entity camera="userHeight:0 fly:true; fov:40" wasd-controls="fly:true" look-controls position="0 7 4" rotation="-60 0 0"></a-entity>
 </a-scene>
 </body>
